--- a/nu.css
+++ b/nu.css
@@ -1,5 +1,7 @@
-* {box-sizing: border-box;
+* {
+    box-sizing: border-box;
 }
+
 .links {
     list-style-type: none;
     margin: 0px;
@@ -9,9 +11,11 @@
     text-align: center;
     display: block;
 }
+
 li {
     display: inline;
 }
+
 li a {
     color: black;
     padding-left: 15px;
@@ -22,6 +26,7 @@ li a {
     float: right;
     display: block;
 }
+
 #motor_logo {
     float: left;
     margin-left: 10px;
@@ -29,12 +34,14 @@ li a {
     padding: 0px;
     position: relative;
 }
+
 #title {
     font-family: cursive;
-    font-size: 22px;
+    font-size: 2rem;
     text-align: center;
-    padding-top: 62px;
+    padding-top: 2rem;
 }
+
 #body {
     text-align: center;
     font-size: 20px;
@@ -42,21 +49,25 @@ li a {
     line-height: 1.7;
     font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
 }
+
 #spacing {
     padding-left: 100px;
     padding-right: 100px;
 }
+
 #ce-i-ala-motor {
     text-align: center;
     font-size: 30px;
-    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     padding-top: 40px;
     text-decoration: underline;
 }
+
 #spacing1 {
     padding-left: 526px;
     padding-right: 526px;
 }
+
 #motor_orig {
     align-items: center;
     justify-content: center;
@@ -64,10 +75,45 @@ li a {
     margin-top: 50px;
     display: flex;
 }
+
 #near_gif {
-    text-align: center;
     font-size: 20px;
-    position: absolute;
+    margin-left: 5rem;
     line-height: 1.7;
     font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+}
+
+.lol {
+    display: flex;
+    margin: 0rem 10rem;
+    align-items: center;
+    justify-content: space-evenly;
+}
+
+#LMAO {
+    width: 10%;
+}
+
+#LMAO2 {
+    width: 85%;
+}
+
+.navbar {
+    display: flex;
+    flex-direction: row-reverse;
+    justify-content: space-between;
+    align-items: center;
+
+    .stuff {
+        display: inherit;
+
+    }
+
+    a {
+        text-decoration: none;
+        color: black;
+        padding: 10px;
+        margin: 5px;
+        font-family: cursive;
+    }
 }
