--- a/Contact/contact.css
+++ b/Contact/contact.css
@@ -54,3 +54,24 @@ li a {
         font-family: cursive;
     }
 }
+
+#temporar {
+    display: flex;
+    margin: 7rem 3rem;
+    flex-direction: column;
+    align-items: center;
+}
+
+#texttemp {
+    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+    font-size: 30px;
+    word-spacing: 1.7;
+    line-height: 1.5;
+    display: flex;
+    text-align: center;
+}
+
+#temp {
+    width: 25%;
+    height: 25%;
+}
