--- a/ce-este-motorul/ce-este-motorul.css
+++ b/ce-este-motorul/ce-este-motorul.css
@@ -151,6 +151,11 @@ li a {
     margin-bottom: 2rem;
 }
 
+#introd {
+    text-decoration: none;
+    color: black;
+}
+
 .introducere {
     margin-top: 2rem;
     font-size: 20px;
@@ -181,6 +186,19 @@ li a {
     word-spacing: 5;
 }
 
+.underline {border-color: black;
+    position: relative;
+    top: -10px;
+    width: 25%;
+    height: 5px;
+    border: none;
+    background-color: black;
+    border-radius: 3px;
+    margin: 0;
+    right: -172px;
+
+}
+
 .exempleimagini {
     display: flex;
     align-items: center;
@@ -198,6 +216,7 @@ li a {
 #cuprins {
     display: flex;
     justify-content: center;
+    line-height: 2;
 }
 
 .cuprins {
@@ -209,4 +228,55 @@ li a {
     margin-bottom: 3rem;
     line-height: 1.6;
     
+}
+
+.revolutie1 {
+    font-family: cursive;
+    font-size: 2rem;
+    text-align: center;
+}
+
+#cevarevo {
+    font-size: 20px;
+    margin: 0 10rem;
+    line-height: 1.7;
+    margin-top: 3rem;
+    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+}
+
+#descopeririceva {
+    margin: 0px 8rem;
+    margin-top: 2rem;
+    display: flex;
+    flex-wrap: wrap;
+}
+
+.descopeririceva {
+    color: black;
+    display: flex;
+    justify-content: center;
+    font-size: 20px;
+    margin: 0 1rem;
+    line-height: 1.7;
+    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+}
+
+#lista1 {
+    display: list-item;
+    background-color: #AFAFAF;
+    
+}
+
+#lista2 {
+    display: list-item;
+    background-color: #747474;
+}
+
+.capdelista {
+    font-family: cursive;
+    margin-bottom: 3rem;
+    font-size: 20px;
+    margin-left: 2rem;
+    margin-right: 2rem;
+    text-align: center;
 }
