--- a/despre-noi/despre-noi.css
+++ b/despre-noi/despre-noi.css
@@ -55,6 +55,30 @@ li a {
     }
 }
 
+.hover {
+    display: inline-block;
+    position: relative;
+    color: black;
+}
+
+.hover::after {
+    content: '';
+    position: absolute;
+    width: 100%;
+    transform: scaleX(0);
+    height: 2px;
+    bottom: 0;
+    left: 0;
+    background-color: black;
+    transform-origin: bottom right;
+    transition: transform 0.25s ease-out;
+}
+
+.hover:hover::after {
+    transform: scaleX(1);
+    transform-origin: bottom left;
+}
+
 #temporar {
     display: flex;
     margin: 7rem 3rem;
