--- a/Contact/contact.css
+++ b/Contact/contact.css
@@ -55,25 +55,28 @@ li a {
     }
 }
 
-#temporar {
-    display: flex;
-    margin: 7rem 3rem;
-    flex-direction: column;
-    align-items: center;
+.hover {
+    display: inline-block;
+    position: relative;
+    color: black;
 }
 
-#texttemp {
-    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
-    font-size: 30px;
-    word-spacing: 1.7;
-    line-height: 1.5;
-    display: flex;
-    text-align: center;
+.hover::after {
+    content: '';
+    position: absolute;
+    width: 100%;
+    transform: scaleX(0);
+    height: 2px;
+    bottom: 0;
+    left: 0;
+    background-color: black;
+    transform-origin: bottom right;
+    transition: transform 0.25s ease-out;
 }
 
-#temp {
-    width: 25%;
-    height: 25%;
+.hover:hover::after {
+    transform: scaleX(1);
+    transform-origin: bottom left;
 }
 
 #contact {
