--- a/ce-este-motorul/ce-este-motorul.css
+++ b/ce-este-motorul/ce-este-motorul.css
@@ -101,7 +101,7 @@ li a {
 
 .navbar {
     display: flex;
-    flex-direction: row-reverse;
+    flex-direction: row;
     justify-content: space-between;
     align-items: center;
 
