--- a/tipuri-de-motoare/tipuri-de-motoare.css
+++ b/tipuri-de-motoare/tipuri-de-motoare.css
@@ -62,7 +62,7 @@ li a {
 
 .navbar {
     display: flex;
-    flex-direction: row-reverse;
+    flex-direction: row;
     justify-content: space-between;
     align-items: center;
 
