--- a/Contact/contact.css
+++ b/Contact/contact.css
@@ -37,7 +37,7 @@ li a {
 
 .navbar {
     display: flex;
-    flex-direction: row-reverse;
+    flex-direction: row;
     justify-content: space-between;
     align-items: center;
 
