--- a/pagina-principala/pagina-principala.css
+++ b/pagina-principala/pagina-principala.css
@@ -2,39 +2,6 @@
     box-sizing: border-box;
 }
 
-.links {
-    list-style-type: none;
-    margin: 0px;
-    margin-top: 15px;
-    padding: 0px;
-    flex: content;
-    text-align: center;
-    display: block;
-}
-
-li {
-    display: inline;
-}
-
-li a {
-    color: black;
-    padding-left: 15px;
-    padding-right: 15px;
-    text-decoration: none;
-    font-size: 18px;
-    font-family: cursive;
-    float: right;
-    display: block;
-}
-
-#motor_logo {
-    float: left;
-    margin-left: 10px;
-    margin-top: 5px;
-    padding: 0px;
-    position: relative;
-}
-
 .navbar {
     display: flex;
     flex-direction: row-reverse;
@@ -43,7 +10,6 @@ li a {
 
     .stuff {
         display: inherit;
-
     }
 
     a {
@@ -59,6 +25,7 @@ li a {
     display: inline-block;
     position: relative;
     color: black;
+    text-decoration: none;
 }
 
 .hover::after {
@@ -79,23 +46,36 @@ li a {
     transform-origin: bottom left;
 }
 
-#temporar {
+#titlu {
     display: flex;
-    margin: 7rem 3rem;
-    flex-direction: column;
-    align-items: center;
+    justify-content: center;
 }
 
-#texttemp {
-    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
-    font-size: 30px;
-    word-spacing: 1.7;
-    line-height: 1.5;
-    display: flex;
+#titlu {
+    display: inherit;
+    font-family: cursive;
+    font-size: 25px;
     text-align: center;
+    margin-top: 3rem;
+    margin-bottom: 3rem;
+    line-height: 1.6;
 }
 
-#temp {
-    width: 25%;
-    height: 25%;
+.pagina {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-top: 7rem;
+    font-size: 3rem;
+    margin-bottom: 2rem;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+}
+
+.pagina2 {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-top: 2rem;
+    font-size: 3rem;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
